bugfixes for setting no routing

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,1 @@
-{
-    "map": "Debug Map",
-    "position": "Position Simulation",
-    "search": "Nominatim",
-    "router": "OSRM"
-}
+{"map": "Debug Map", "position": "Position Simulation", "search": "Nominatim", "router": "OSRM"}
